--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,5 +1,16 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+:root {
+  --dark: #212121;
+  --light: #f3f3f3;
+  --font: "Odibee Sans", cursive;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 16px;
+  font-family: var(--font);
+  width: 100%;
 }
